argocd/hello-k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-argocd"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: hello-k8s.nhavuon.online
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-k8s
                port:
                  number: 5000
